[package]
name = "kvs"
version = "0.1.0"
authors = ["Ziyi Yan <ziyi.yan@foxmail.com>"]
description = "A key-value store"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
